modify swagger docs, and try cache(with lock, and without) on single server apache
